# fOS-engine

./: .gitignore  Cargo.toml  LICENSE  PHASES.md  README.md  ROADMAP.md
crates/browser/fos-browser/: Cargo.toml
crates/browser/fos-browser/src/: animation.rs  app.rs  autofill.rs  bookmarks.rs  builtins.rs  cache_manager.rs  constraint_validation.rs  contenteditable.rs  cookies.rs  datalist.rs  dedup.rs  devtools.rs  events.rs  file_upload.rs  find.rs  fixed.rs  form_history.rs  frame_scheduler.rs  fullscreen.rs  hibernation.rs  history.rs  indexeddb.rs  input_mode.rs  intern.rs  intersection_observer.rs  lib.rs  media.rs  network.rs  network_info.rs  notifications.rs  optimization.rs  page.rs  page_visibility.rs  passwords.rs  permissions.rs  plugins.rs  print.rs  profiling.rs  renderer.rs  security.rs  (+9 more)
crates/browser/fos-browser/src/energy/: adaptive_renderer.rs  gpu_power.rs  idle_detector.rs  media_power.rs  mod.rs  network_throttle.rs  scheduler.rs  tab_throttler.rs  wake_lock.rs  workload.rs
crates/browser/fos-browser/src/ui/: chrome.rs  mod.rs  url_bar.rs
crates/engine/fos-css/: Cargo.toml
crates/engine/fos-css/src/: anchor.rs  container.rs  cow_style.rs  css_delta.rs  has_selector.rs  incremental_style.rs  jit_selector.rs  layers.rs  lib.rs  nesting.rs  parallel_css_parser.rs  parallel_style.rs  predictive.rs  properties.rs  rule_tree.rs  scope.rs  selector_bloom.rs  selector_match_cache.rs  selector_opt.rs  selector_split.rs  selectors.rs  style_cache.rs  style_sharing.rs  subtree_isolation.rs  transitions.rs  variables.rs  view_transitions.rs  web_animations.rs
crates/engine/fos-html/: Cargo.toml
crates/engine/fos-html/src/: incremental_parser.rs  lib.rs  parallel_parser.rs  serializer.rs  simd_parse.rs
crates/engine/fos-html/tests/: edge_cases.rs
crates/engine/fos-layout/: Cargo.toml
crates/engine/fos-layout/src/: anchor_positioning.rs  compact_layout.rs  container_queries.rs  flex.rs  grid.rs  grid_cache.rs  intrinsic_size_cache.rs  invalidation.rs  lazy.rs  lib.rs  masonry.rs  math_layout.rs  multicolumn.rs  parallel_layout.rs  streaming_layout.rs  subgrid.rs
crates/engine/fos-layout/tests/: edge_cases.rs
crates/engine/fos-text/: Cargo.toml
crates/engine/fos-text/src/: glyph_atlas.rs  lib.rs  mmap_resources.rs
crates/engine/fos-text/src/font/: brotli.rs  custom_database.rs  database.rs  intern.rs  mod.rs  optimization.rs  woff2.rs  woff2_optimize.rs  woff2_transforms.rs
crates/engine/fos-text/src/layout/: vertical.rs
crates/engine/fos-text/src/render/: decorations.rs  hinting.rs  mod.rs  rasterizer.rs
crates/engine/fos-text/src/shaping/: arabic.rs  cache.rs  gpos.rs  indic.rs  run.rs  script.rs
crates/fos-browser/: Cargo.toml
crates/fos-browser/src/: accessibility.rs  advanced_mem.rs  advanced_net.rs  app.rs  battery.rs  benchmark.rs  broadcast.rs  canvas.rs  clipboard.rs  compat.rs  compress.rs  cookies.rs  cow.rs  dialog.rs  downloads.rs  dragdrop.rs  extensions.rs  forms.rs  gamepad.rs  geolocation.rs  history.rs  http3.rs  indexeddb.rs  js_runtime.rs  lib.rs  loader.rs  main.rs  memory.rs  mutation_observer.rs  navigation.rs  network.rs  page.rs  performance.rs  pointer.rs  predictive.rs  renderer.rs  resize_observer.rs  scroll.rs  selection.rs  sensors.rs  (+8 more)
crates/fos-browser/src/ui/: chrome.rs  font.rs  mod.rs  tab_bar.rs  url_bar.rs
crates/fos-engine/: Cargo.toml
crates/fos-engine/src/: arena.rs  bench.rs  cold.rs  compat.rs  compressed_ptr.rs  cow.rs  fixed_point.rs  intern.rs  lib.rs  page.rs  roaring.rs  semantic_compression.rs  sentinel.rs  succinct.rs  url.rs  visibility.rs
crates/fos-js/: Cargo.toml
crates/fos-js/src/: bindings.rs  console.rs  const_fold.rs  engine_trait.rs  escape_analysis.rs  history.rs  jit_bytecode.rs  lib.rs  location.rs  media.rs  media_bindings.rs  runtime.rs  storage.rs  timers.rs  worker.rs
crates/fos-js/src/builtins/: atomics.rs  collections.rs  mod.rs  promise.rs  symbol.rs  top_level_await.rs  weakref.rs
crates/fos-js/src/engine/: ast.rs  builtins.rs  bytecode.rs  collections.rs  compiler.rs  custom_engine.rs  date.rs  dom_bindings.rs  event_loop.rs  execution_hooks.rs  gc.rs  guards.rs  integration.rs  jit.rs  json.rs  loop_analyzer.rs  mod.rs  object.rs  object_pool.rs  optimizer.rs  parser.rs  promise.rs  proxy.rs  reg_to_native.rs  regex.rs  stack_to_reg.rs  token.rs  value.rs  vm.rs
crates/fos-js/src/events/: clipboard.rs  drag.rs  keyboard.rs  touch.rs
crates/fos-js/src/webapi/: encoding.rs  file_reader.rs  formdata.rs  mod.rs  notifications.rs  permissions.rs  push.rs  url.rs  vibration.rs
crates/fos-js/src/worker/: mod.rs  service_worker.rs  shared_worker.rs
crates/fos-js/tests/: edge_cases.rs  phase5_tests.rs
crates/fos-net/: Cargo.toml
crates/fos-net/src/: cache.rs  client.rs  coalescing.rs  fetch.rs  http1.rs  http2.rs  http3.rs  lib.rs  loader.rs  network_opt.rs  tcp.rs  tls.rs  websocket.rs  xhr.rs
crates/fos-net/tests/: edge_cases.rs
crates/fos-render/: Cargo.toml
crates/fos-render/src/: background.rs  canvas.rs  dirty_rect_fusion.rs  display_list.rs  effects.rs  gpu.rs  layers.rs  lib.rs  occlusion_culling.rs  painter.rs  progressive_render.rs  render_opt.rs  text.rs  tree_pruning.rs  webgl.rs  webgpu.rs
crates/fos-render/src/image/: decoder.rs  ico.rs  mod.rs  pool.rs  progressive.rs  queue.rs  renderer.rs
crates/fos-render/src/image/decoders/: jpeg.rs  webp.rs
crates/fos-text/: Cargo.toml
crates/fos-text/src/: lib.rs  ruby.rs
crates/fos-text/src/font/: arena.rs  database.rs  emoji.rs  face.rs  fixed_point.rs  matching.rs  mod.rs  variable.rs  woff.rs
crates/fos-text/src/font/parser/: cmap.rs  glyf.rs  mod.rs  outline.rs  reader.rs  tables.rs
crates/fos-text/src/layout/: line.rs  mod.rs  paragraph.rs
crates/fos-text/src/render/: atlas.rs  mod.rs  rasterizer.rs
crates/fos-text/src/shaping/: bidi.rs  gsub.rs  memory.rs  mod.rs  shaper.rs
docs/: ACCESSIBILITY_ROADMAP.md  ARCHITECTURE_ROADMAP.md  CACHING_OPTIMIZATION_ROADMAP.md  CONCURRENCY_OPTIMIZATION_ROADMAP.md  CSS_ROADMAP.md  DEVTOOLS_ROADMAP.md  DOM_HTML_ROADMAP.md  PHASES.md  (+19 more)
(+425 files in other folders)
