[workspace]
resolver = "2"
members = [
    "crates/fos-html",
    "crates/fos-css",
    "crates/fos-dom",
    "crates/fos-layout",
    "crates/fos-render",
    "crates/fos-js",
    "crates/fos-net",
    "crates/fos-engine",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["fOS Team"]
license = "LicenseRef-NonCommercial"
repository = "https://github.com/fos/fos-engine"

[workspace.dependencies]
# Memory allocator - minimal overhead
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

# Parsing
html5ever = "0.36"
lightningcss = "1.0.0-alpha.68"

# JavaScript engine (tiny - 2MB)
rquickjs = "0.9"

# Rendering
tiny-skia = "0.11"
# wgpu = "23.0"  # GPU rendering (Phase 3+)

# Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
url = "2.5"

# Async runtime (lightweight)
smol = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size

[profile.dev]
opt-level = 1
