[workspace]
resolver = "2"
members = [
    # JS Engine
    "crates/js/fos-js",
    
    # Core Engine
    "crates/engine/fos-engine",
    "crates/engine/fos-html",
    "crates/engine/fos-css",
    "crates/engine/fos-dom",
    "crates/engine/fos-layout",
    "crates/engine/fos-render",
    "crates/engine/fos-text",
    "crates/engine/fos-net",
    
    # Browser
    "crates/browser/fos-browser",
    "crates/browser/fos-canvas",
    "crates/browser/fos-media",
    "crates/browser/fos-security",
    "crates/browser/fos-a11y",
    "crates/browser/fos-devtools",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["fOS Team"]
license = "LicenseRef-NonCommercial"
repository = "https://github.com/fos/fos-engine"

[workspace.dependencies]
# Memory allocator - minimal overhead
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

# Parsing
html5ever = "0.36"
lightningcss = "1.0.0-alpha.68"

# Rendering
tiny-skia = "0.11"
# wgpu = "23.0"  # GPU rendering (Phase 3+)

# Text rendering - custom shaper (replaces rustybuzz)
glob = "0.3"

# Async runtime (lightweight)
smol = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size
debug = false    # No debug info in release builds

[profile.dev]
opt-level = 1
