[package]
name = "fos-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "JavaScript runtime for fOS Engine"

[dependencies]
fos-dom = { path = "../fos-dom" }
rquickjs.workspace = true
tracing.workspace = true
thiserror.workspace = true
url.workspace = true
