[package]
name = "fos-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Networking for fOS Engine"

[dependencies]
reqwest = { workspace = true }
tracing.workspace = true
thiserror.workspace = true
smol.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
