[package]
name = "fos-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Networking for fOS Engine"

[dependencies]
tracing.workspace = true
thiserror.workspace = true
smol.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# TLS support
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
webpki-roots = "0.26"
rustls-pki-types = "1.0"
