[package]
name = "fos-render"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rendering engine for fOS Engine"

[dependencies]
fos-layout = { path = "../fos-layout" }
fos-css = { path = "../fos-css" }
fos-text = { path = "../fos-text" }
tiny-skia.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Image decoding (minimal features for size)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }

[dev-dependencies]
png = "0.17"
