[package]
name = "fos-browser"
version = "0.1.0"
edition = "2021"
description = "Minimalist web browser using fOS Engine"
license = "MIT"
default-run = "fos-browser"

[dependencies]
# Core engine components
fos-engine = { path = "../../engine/fos-engine" }
fos-html = { path = "../../engine/fos-html" }
fos-dom = { path = "../../engine/fos-dom" }
fos-css = { path = "../../engine/fos-css" }
fos-layout = { path = "../../engine/fos-layout" }
fos-render = { path = "../../engine/fos-render" }
fos-text = { path = "../../engine/fos-text" }

# JavaScript runtime
fos-js = { path = "../../js/fos-js" }

# Networking (HTTP cache, prefetch, XHR)
fos-net = { path = "../../engine/fos-net" }

# Security (CORS, CSP)
fos-security = { path = "../fos-security" }

# Accessibility
fos-a11y = { path = "../fos-a11y" }

# Developer tools
fos-devtools = { path = "../fos-devtools" }

# Media (video, audio)
fos-media = { path = "../fos-media" }

# Canvas (2D and WebGL)
fos-canvas = { path = "../fos-canvas" }

# Window management (minimal)
winit = "0.30"

# CPU framebuffer (lightweight alternative to GPU)
softbuffer = "0.4"

# Async runtime (lightweight)
smol = "2.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Error handling
thiserror = "1.0"

[features]
# Default: Core browser only
default = []

# Enable all optional modules
full = ["predictive-net", "device-apis", "extensions"]

# HTTP/3 and predictive networking
predictive-net = []

# Device APIs (battery, gamepad, sensors, geolocation)
device-apis = []

# Extension and plugin support
extensions = []

[[bin]]
name = "fos-browser"
path = "src/main.rs"
