[package]
name = "fos-html"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTML5 parser for fOS Engine"

[dependencies]
html5ever.workspace = true
markup5ever_rcdom = "0.36"
fos-dom = { path = "../fos-dom" }
tracing.workspace = true
thiserror.workspace = true
