[package]
name = "fos-text"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text rendering and font handling for fOS browser engine"

[features]
default = ["bundled-fonts"]
# Use bundled font rendering (custom parser + custom shaper)
bundled-fonts = []
# Use system FreeType for font rendering (smaller binary, requires libfreetype)
system-freetype = []

[dependencies]
# Rendering (for glyph rasterization)
tiny-skia.workspace = true

# Error handling
thiserror.workspace = true

# Optional: for system font scanning
glob = "0.3"

[dev-dependencies]
